--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
                 distribution: 'corretto'
                 java-version: '21'
                 cache: 'maven'
-                cache-dependency-path: 'calc/pom.xml'
+                cache-dependency-path: 'pom.xml'
               name: Build with Maven
             - run: mvn package
             - run: java -jar .\target\calc-0.1-jar-with-dependencies.jar
