--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,5 +21,5 @@ jobs:
                 cache-dependency-path: 'pom.xml'
               name: Build with Maven
             - run: mvn package
-            - run: java -jar .\target\calc-0.1-jar-with-dependencies.jar
+            - run: java -jar calc-0.1-jar-with-dependencies.jar
               
