--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
               name: Build with Maven
             - run: mvn package
             - run: mkdir staging && cp target\*.jar staging
-            - uses: actions/upload-artifact@4
+            - uses: actions/upload-artifact@v4
               with:
                 name: package
                 path: staging
