--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
                 cache-dependency-path: 'pom.xml'
               name: Build with Maven
             - run: mvn package
-            - run: mkdir staging && cp target/*.jar staging
+            - run: mkdir staging && cp target/*.jar pack
             - uses: actions/upload-artifact@v4
               with:
                 name: package
