--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                os: [ windows-latest,ubuntu-latest,macos-latest ]
+                os: [ windows-latest ]
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-java@v4
@@ -21,8 +21,8 @@ jobs:
                 cache-dependency-path: 'pom.xml'
               name: Build with Maven
             - run: mvn package
-            - run: mkdir pack && cp target/*.jar pack
+            - run: mkdir staging && cp target/*.jar staging
             - uses: actions/upload-artifact@v4
               with:
                 name: package
-                path: pack
+                path: staging
