--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,13 +20,8 @@ jobs:
             - run: mvn package
             - run: mkdir target/libs && cp target/calc-0.1-jar-with-dependencies.jar target/libs
             - run: jlink --add-modules java.base,java.desktop --output target/custom-jre
-            - run: jpackage -t app-image --input target/libs --main-jar calc-0.1-jar-with-dependencies.jar --runtime-image target/custom-jre --dest target/output
+            - run: jpackage -t app-image -i target/libs --main-jar calc-0.1-jar-with-dependencies.jar --runtime-image target/custom-jre --dest target/output -n SwingCalc
             - uses: actions/upload-artifact@v4
               with:
                 name: packaging
                 path: target/output
-            # - run: mkdir staging && cp target/*.jar staging
-            # - uses: actions/upload-artifact@v4
-            #   with:
-            #     name: package
-            #     path: staging
